# 2dgame

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  class-structure.md  testmedia.sh
.github/workflows/: codeql-analysis.yml
src/: UI.cpp  UI.hpp  character.cpp  character.hpp  constants.h  gameManager.hpp  globals.h  loaders.cpp  loaders.h  main.cpp  main.h  main.hpp  map.cpp  map.hpp  mapManager.cpp  mapManager.hpp  sprite.cpp  sprite.h  sprite.hpp  vector.cpp
src/entities/: character.cpp  character.hpp
src/game/: gameManager.cpp  gameManager.hpp  loaders.cpp  loaders.hpp  map.cpp  map.hpp
src/graphics/: UI.cpp  UI.hpp  sprite.cpp  sprite.hpp  vector.hpp
src/render/: UI.cpp  vector.hpp
